--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^20.4.6",
     "@types/sqlite3": "^3.1.8",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
